[gd_scene load_steps=2 format=3 uid="uid://chu54nuudbsla"]

[ext_resource type="Script" path="res://astropolis_public/gui_panels/itab_operations.gd" id="1"]

[node name="Operations" type="MarginContainer"]
offset_left = 7.0
offset_top = 7.0
offset_right = 568.0
offset_bottom = 347.0
script = ExtResource("1")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2

[node name="Energy" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2

[node name="Hdrs" type="HBoxContainer" parent="TabContainer/Energy"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Energy/Hdrs"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Hdr1" type="Label" parent="TabContainer/Energy/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="Hdr2" type="Label" parent="TabContainer/Energy/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Power"

[node name="Hdr3" type="Label" parent="TabContainer/Energy/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fuel"

[node name="Hdr4" type="Label" parent="TabContainer/Energy/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revenue"

[node name="Hdr5" type="Label" parent="TabContainer/Energy/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Margin"

[node name="Spacer2" type="Control" parent="TabContainer/Energy/Hdrs"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="TabContainer/Energy"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnergyVBox" type="VBoxContainer" parent="TabContainer/Energy/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Extraction" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Hdrs" type="HBoxContainer" parent="TabContainer/Extraction"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Extraction/Hdrs"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Hdr1" type="Label" parent="TabContainer/Extraction/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="Hdr2" type="Label" parent="TabContainer/Extraction/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Power"

[node name="Hdr3" type="Label" parent="TabContainer/Extraction/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Extraction"

[node name="Hdr4" type="Label" parent="TabContainer/Extraction/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revenue"

[node name="Hdr5" type="Label" parent="TabContainer/Extraction/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Margin"

[node name="Spacer2" type="Control" parent="TabContainer/Extraction/Hdrs"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="TabContainer/Extraction"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExtractionVBox" type="VBoxContainer" parent="TabContainer/Extraction/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Refining" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Hdrs" type="HBoxContainer" parent="TabContainer/Refining"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Refining/Hdrs"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Hdr1" type="Label" parent="TabContainer/Refining/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="Hdr2" type="Label" parent="TabContainer/Refining/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Power"

[node name="Hdr3" type="Label" parent="TabContainer/Refining/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Conversion"

[node name="Hdr4" type="Label" parent="TabContainer/Refining/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revenue"

[node name="Hdr5" type="Label" parent="TabContainer/Refining/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Margin"

[node name="Spacer2" type="Control" parent="TabContainer/Refining/Hdrs"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="TabContainer/Refining"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RefiningVBox" type="VBoxContainer" parent="TabContainer/Refining/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Manufacturing" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Hdrs" type="HBoxContainer" parent="TabContainer/Manufacturing"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Manufacturing/Hdrs"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Hdr1" type="Label" parent="TabContainer/Manufacturing/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="Hdr2" type="Label" parent="TabContainer/Manufacturing/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Power"

[node name="Hdr3" type="Label" parent="TabContainer/Manufacturing/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Production"

[node name="Hdr4" type="Label" parent="TabContainer/Manufacturing/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revenue"

[node name="Hdr5" type="Label" parent="TabContainer/Manufacturing/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Margin"

[node name="Spacer2" type="Control" parent="TabContainer/Manufacturing/Hdrs"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="TabContainer/Manufacturing"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ManufacturingVBox" type="VBoxContainer" parent="TabContainer/Manufacturing/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Biomes" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Hdrs" type="HBoxContainer" parent="TabContainer/Biomes"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Biomes/Hdrs"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Hdr1" type="Label" parent="TabContainer/Biomes/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="Hdr2" type="Label" parent="TabContainer/Biomes/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Power"

[node name="Hdr3" type="Label" parent="TabContainer/Biomes/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bioprod"

[node name="Hdr4" type="Label" parent="TabContainer/Biomes/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revenue"

[node name="Hdr5" type="Label" parent="TabContainer/Biomes/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Margin"

[node name="Spacer2" type="Control" parent="TabContainer/Biomes/Hdrs"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="TabContainer/Biomes"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BiomesVBox" type="VBoxContainer" parent="TabContainer/Biomes/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Services" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Hdrs" type="HBoxContainer" parent="TabContainer/Services"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Services/Hdrs"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Hdr1" type="Label" parent="TabContainer/Services/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use"

[node name="Hdr2" type="Label" parent="TabContainer/Services/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Power"

[node name="Hdr3" type="Label" parent="TabContainer/Services/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Comput"

[node name="Hdr4" type="Label" parent="TabContainer/Services/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Revenue"

[node name="Hdr5" type="Label" parent="TabContainer/Services/Hdrs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Margin"

[node name="Spacer2" type="Control" parent="TabContainer/Services/Hdrs"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="TabContainer/Services"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServicesVBox" type="VBoxContainer" parent="TabContainer/Services/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NoOpsLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "LABEL_NO_OPERATIONS"
horizontal_alignment = 1
